# SCON_Prototype

./: VERSION  configure.ac
opal/: Makefile.am
opal/mca/if/: Makefile.am
opal/mca/pmix/: Makefile.am
opal/mca/reachable/: Makefile.am
opal/mca/sec/: Makefile.am
orte/: Makefile.am
orte/mca/errmgr/: Makefile.am
orte/mca/ess/: Makefile.am
orte/mca/grpcomm/: Makefile.am
orte/mca/oob/: Makefile.am
orte/mca/qos/: Makefile.am
orte/mca/rml/: Makefile.am
orte/mca/routed/: Makefile.am
orte/mca/state/: Makefile.am
