#
# Copyright (c) 2009-2010 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2015      Intel, Inc. All rights reserved
#
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

# ORTE components are always installed as DSOs, so there's no logic
# necessary here to build them statically.

SUBDIRS = $(MCA_orte_errmgr_DSO_COMPONENTS)
